--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,41 @@
+appdirs==1.4.4
+attrs==23.2.0
 beautifulsoup4==4.12.3
+bs4==0.0.2
 certifi==2024.6.2
 charset-normalizer==3.3.2
+cssselect==1.2.0
+exceptiongroup==1.2.2
+fake-useragent==1.5.1
+h11==0.14.0
 idna==3.7
+importlib_metadata==8.0.0
+lxml==5.2.2
+lxml_html_clean==0.1.1
+outcome==1.3.0.post0
+packaging==24.1
+parse==1.20.2
+pyee==11.1.0
+pyppeteer==2.0.0
+pyquery==2.0.0
+PySocks==1.7.1
 pyTelegramBotAPI==4.20.0
 python-dotenv==1.0.1
 requests==2.32.3
+requests-html==0.10.0
+selenium==4.22.0
+sniffio==1.3.1
+sortedcontainers==2.4.0
 soupsieve==2.5
-urllib3==2.2.2
+tqdm==4.66.4
+trio==0.26.0
+trio-websocket==0.11.1
+typing_extensions==4.12.2
+urllib3==1.26.19
+w3lib==2.2.1
+webdriver-manager==4.0.1
+websocket-client==1.8.0
+websockets==10.4
+wsproto==1.2.0
+xvfbwrapper==0.2.9
+zipp==3.19.2
