--- a/requirements.txt
+++ b/requirements.txt
@@ -1,39 +1,76 @@
 appdirs==1.4.4
+asgiref==3.10.0
+astroid==4.0.1
 attrs==23.2.0
+backports.tarfile==1.2.0
 beautifulsoup4==4.12.3
 bs4==0.0.2
+build==1.2.1
 certifi==2024.6.2
+cffi==1.16.0
 charset-normalizer==3.3.2
+cryptography==43.0.0
 cssselect==1.2.0
+dill==0.4.0
+Django==5.2.8
+django-json-widget==2.1.0
+docutils==0.21.2
 exceptiongroup==1.2.2
 fake-useragent==1.5.1
 h11==0.14.0
 idna==3.7
 importlib_metadata==8.0.0
+isort==7.0.0
+jaraco.classes==3.4.0
+jaraco.context==5.3.0
+jaraco.functools==4.0.1
+jeepney==0.8.0
+keyring==25.2.1
 lxml==5.2.2
 lxml_html_clean==0.1.1
+Markdown==3.6
+markdown-it-py==3.0.0
+mccabe==0.7.0
+mdurl==0.1.2
+more-itertools==10.3.0
+nh3==0.2.18
 outcome==1.3.0.post0
 packaging==24.1
 parse==1.20.2
+pkginfo==1.10.0
+platformdirs==4.5.0
+pycparser==2.22
 pyee==11.1.0
+Pygments==2.18.0
+pylint==4.0.2
 pyppeteer==2.0.0
+pyproject_hooks==1.1.0
 pyquery==2.0.0
 PySocks==1.7.1
 pyTelegramBotAPI==4.20.0
 python-dotenv==1.0.1
+readme_renderer==44.0
 requests==2.32.3
 requests-html==0.10.0
+requests-toolbelt==1.0.0
+rfc3986==2.0.0
+rich==13.7.1
+SecretStorage==3.3.3
 selenium==4.22.0
 sniffio==1.3.1
 sortedcontainers==2.4.0
 soupsieve==2.5
+sqlparse==0.5.3
+tomli==2.0.1
+tomlkit==0.13.3
 tqdm==4.66.4
 trio==0.26.0
 trio-websocket==0.11.1
+twine==5.1.1
 typing_extensions==4.12.2
 urllib3==1.26.19
 w3lib==2.2.1
-webdriver-manager==4.0.1
+webdriver-manager==4.0.2
 websocket-client==1.8.0
 websockets==10.4
 wsproto==1.2.0
