--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 BOT_TOKEN=token
-ADMIN_CHAT_ID=chat_id
-TIMEOUT=timeout
+ADMIN_CHAT_ID=12345
+TIMEOUT=10
 TURN_ON_NOTIFY=True
 VM_ROOT_PASS=root_password
 PROVIDER=poe
