--- a/conf/gunicorn.service
+++ b/conf/gunicorn.service
@@ -11,7 +11,7 @@ ExecStart=/opt/e-energy/venv/bin/gunicorn \
           --access-logfile - \
           --workers 3 \
           --bind unix:/run/gunicorn.sock \
-          main.energybot.web.energyweb.wsgi:application
+            energybot.web.energyweb.wsgi:application
 
 [Install]
 WantedBy=multi-user.target
