--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -4,7 +4,7 @@ server {
 
     location = /favicon.ico { access_log off; log_not_found off; }
     location /static/ {
-        root /opt/e-energy;
+        alias /opt/e-energy/staticfiles/;
     }
 
     location / {
