--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ TIMEOUT=10
 TURN_ON_NOTIFY=True
 VM_ROOT_PASS=root_password
 PROVIDER=poe
-PROVIDER_URL=provider_url
+PROVIDER_URL=https://www.poe.pl.ua/disconnection/power-outages/
 DEBUG=False
 SECRET_KEY="secret_key"
 ALLOWED_HOSTS="*"
